Prevent scrollbars

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+html,
+body {
+  overflow: hidden;
+}
+
 .active {
   text-decoration: underline;
 }
